@@ -20,7 +20,7 @@
  <alias from="edit" to="base_edit"/>
  <alias from="view" to="projects_view"/>
  <action title="View" action_id="view" category="object"
-    condition_expr="python:1" url_expr="string:${object_url}/projects_view"
+    condition_expr="python:1" url_expr="string:${object_url}"
     visible="True">
   <permission value="View"/>
  </action>
