@@ -10,6 +10,10 @@ branch must be ported to trunk as well.
 3.34 (unreleased)
 -----------------
 
+- Edit the portal types xml to have the View action just point to the
+  object url instead of base_view or similar.
+  [maurits]
+
 - Do not show th subscribe or unsubscribe option directly after
   someone has subscribed.  This seems to confuse people.
   [maurits]
